--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,12 @@ description: Toutes les informations concernant le concours national de robotiqu
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
-  Resources:
+  A Propos: "aboutme"
+  Inscriptions: ""
+  Ressources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "http://deanattali.com"
+  Supporter: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
