--- a/_config.yml
+++ b/_config.yml
@@ -20,25 +20,27 @@ description: Toutes les informations concernant le concours national de robotiqu
 
 # List of links in the navigation bar
 navbar-links:
-  A Propos: "info"
+  Accueil: "index"
   Inscriptions: "inscription"
-  Ressources:
-    - Former son equipe: ""
-    - Inscrire son Equipe: ""
-    - Se preparer pour le test de prequalifaction: ""
-    - Subir le test de prequalifaction: ""
-    - Recevoir le kit de robotique: ""
-    - Se familiariser avec le kit de robotique: ""
-    - Presentation du challenge classique: ""
-    - Construire son robot (Categorie Classique): ""
-    - Construire son robot (Categorie Universitaire): ""
-    - Tirer avantage des centres de robotique: ""
-    - Tirer avantage de son Mentor: ""
-    - Se preparer pour la finale: ""
-    - Workshops et seminaires: ""
-    - Autres ressources: ""
-    - L'equipe d'organisation: ""
   Supporter: "http://www.emohaiti.com/fundraising"
+  
+  
+ # Ressources:
+ #   - Former son equipe: ""
+ #  - Inscrire son Equipe: ""
+ #   - Se preparer pour le test de prequalifaction: ""
+ #   - Subir le test de prequalifaction: ""
+ #   - Recevoir le kit de robotique: ""
+ #   - Se familiariser avec le kit de robotique: ""
+ #   - Presentation du challenge classique: ""
+ #   - Construire son robot (Categorie Classique): ""
+ #   - Construire son robot (Categorie Universitaire): ""
+ #   - Tirer avantage des centres de robotique: ""
+ #   - Tirer avantage de son Mentor: ""
+ #   - Se preparer pour la finale: ""
+ #   - Workshops et seminaires: ""
+ #   - Autres ressources: ""
+ #   - L'equipe d'organisation: ""
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
