Update website name

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: EMO-Haiti | Concours de Robotique 2020
+title: EMO-Haiti | Robotique 2020
 
 # Short description of your site
 description: Toutes les informations concernant le concours national de robotique 2020
